# novel-reader

./: .gitattributes  .gitignore  README.md  pyproject.toml  qwen_embed_server.py  启动NovelReader.cmd  操作指南.md
.claude-plugin/: plugin.json
.opencode/commands/: novel-analyze.md  novel-ask.md  novel-books.md  novel-continue.md  novel-ingest.md  novel-map.md  novel-outline.md  novel-status.md  novel-style.md
.opencode/plugins/: novel-reader.ts
.opencode/skills/novel-reader/: SKILL.md
.trae/specs/decouple-web-from-cli-stdout/: checklist.md  spec.md  tasks.md
.trae/specs/extract-search-from-cli/: checklist.md  spec.md  tasks.md
skills/novel-books/: SKILL.md
skills/novel-reader/: SKILL.md
skills/novel-web/: SKILL.md
src/novel_reader/: __init__.py  cli.py  intent_router.py  predictor.py  reading_session.py  search.py  storage.py  web_app.py
src/novel_reader/web_static/: app.js  index.html  styles.css
tests/: test_cli_unified_entry.py  test_dispatch.py  test_doctor.py  test_intent_router.py  test_prediction.py  test_reading_importance.py  test_reading_session.py  test_web_claude_bridge.py  test_web_reading_api.py  test_web_static_console.py  test_web_static_text_lock.py
