[project]
name = "novel-reader"
version = "0.1.0"
description = "Claude Code and OpenCode compatible toolkit for reading million-word TXT/Markdown novels."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
novel-reader = "novel_reader.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

